# dockstar

./: .gitignore  CMakeLists.txt  README.md  builder.sh
src/: main.cpp
src/dock/: dock.cpp  dock.h
src/utils/: utils.cpp
